[DOCFIX] A Pass to cleanup web pages on resources group (#7519)
* A Pass to cleanup web pages on resources group

* Futher clean up

* Address comments

* Address comments